[package]
name = "synth_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = "0.54.1"
aws-sdk-glue = "0.24.0"
console = "0.15.4"
dialoguer = { version = "0.10.2", features = ["completion", "fuzzy-matcher", "fuzzy-select", "history"] }
aws-sdk-ec2 = "0.24.0"
aws-types = "0.54.1"
strum = "0.24.1"
strum_macros = "0.24.3"
indicatif = "0.17.3"
base64 = "0.21.0"
aws-sdk-sts = "0.24.0"
aws-sdk-cloudwatchlogs = "0.24.0"
chrono = "0.4.23"
colored = "2.0.0"
aws-sdk-iam = "0.24.0"
futures = "0.3.25"
include_dir = "0.7.3"


